--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,11 @@
 <html>
   <head>
     <title>Gabas</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= render 'shared/rails_default' %>
+    <%= render 'shared/shim' %>
   </head>
-
   <body>
+    <%= render 'shared/flash_messages' %>
     <%= yield %>
   </body>
 </html>
