change navbar icons and link texts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Gabas</title>
+    <title>Challenge</title>
     <%= render 'shared/rails_default' %>
     <%= render 'shared/shim' %>
   </head>
   <body>
+    <%= render 'shared/navbar' %>
     <%= render 'shared/flash_messages' %>
     <%= yield %>
   </body>
