import variables sass file/ import custom font from google fonts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,7 @@
 @import "navbar";
 @import "selectors";
+@import "variables";
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
 
 body { 
   margin: 0;
