--- a/app/assets/stylesheets/selectors.scss
+++ b/app/assets/stylesheets/selectors.scss
@@ -1,11 +1,6 @@
 :root {
   font-size: 16px;
-  font-family: 'Open Sans';
-  --text-primary: #b6b6b6;
-  --text-secondary: #ececec;
-  --bg-primary: #23232e;
-  --bg-secondary: #141418;
-  --transition-speed: 1s;	
+  font-family: 'Ubuntu', sans-serif;
 }
 
 body::-webkit-scrollbar {
