change html inheritance structure/properly nest navbar scss

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -8,61 +8,52 @@
     flex-direction: column;
     height: 100%;
     list-style: none;
-  }
-
-  .logo {
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-bottom: 1rem;
-    text-align: center;
-    color: var(--text-secondary);
-    background: var(--bg-secondary);
-    font-size: 0.9rem;
-    letter-spacing: 0.3ch;
-    width: 100%;
-  }
-
-  .nav-link {
-    display: flex;
-    align-items: center;
-    height: 4rem;
-    color: var(--text-primary);
-    text-decoration: none;
-    filter: grayscale(100%) opacity(0.7);
-    &:hover {
-      filter: grayscale(0%) opacity(1);
-      background: var(--bg-secondary);
-      color: var(--text-secondary);
-    }
-
-    svg {
-      min-width: 1.5rem;
-      margin-left: 0.75rem;
-    }
-
     .nav-item {
       width: 100%;
-    }
-
-    .link-text {
-      margin-left: 1.3rem;  
-    }
-  }    
+      .logo {
+        display: flex;
+        height: 4rem;
+        align-items: center;
+        font-weight: bold;
+        text-decoration: none;
+        text-transform: uppercase;
+        margin-bottom: 1rem;
+        background: var(--logo-bg);
+        color: var(--logo-text);
+        font-size: 1.1rem;
+        letter-spacing: 0.3ch;
+        width: 100%;
+        transition: var(--transition-speed);
+        &:hover {
+          .logo-text {
+            color: var(--logo-text-hover);
+          }
+          .logo-no {
+            color: var(--logo-no);
+          }
+        }  
+      }
+      .nav-link {
+        display: flex;
+        align-items: center;
+        height: 4rem;
+        text-decoration: none;
+        transition: var(--transition-speed);
+        color: var(--text-primary);
+        &:hover {
+          color: var(--text-secondary);
+        }
+        svg {
+          min-width: 1.5rem;
+          margin-left: 0.75rem;
+        }  
+        .link-text {
+          margin-left: 1.3rem;  
+        }
+      }       
+    }       
+  }
 }
-
-.fa-primary {
-  color : #ff7eee;	
-}
-
-.fa-secondary {
-  color: #df49a6;
-}
-
-.fa-primary,
-.fa-secondary {
-  transition: var(--transition-speed);
-}
-
 
 /* SMALL SCREENS */
 @media (max-width: 600px) {
@@ -71,18 +62,20 @@
     width: 100vw;
     height: 3.8rem;
     .navbar-nav {
-      flex-direction: row-reverse;      
-      .logo {
-        display: none;
-      }
-    }
-  }
-
-  .nav-link {
-    justify-content: center;	
-    .link-text {
-      display: none;
-    } 
+      background: var(--bg-secondary);
+      flex-direction: row;
+      .nav-item {
+        .nav-link {
+          justify-content: center;
+          .link-text {
+            display: none;
+          }
+        }
+        &:first-child { 
+          display: none;
+        }   	
+      }       
+    }       
   }
 
   main {
