add main element to the application partial/improve navbar style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,14 @@
 @import "navbar";
 @import "selectors";
-@import "variables";
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
 
 body { 
-  margin: 0;
-  padding: 0;
+  display: flex;
+}
+
+main {
+  flex: 1;
+  height: 100vh;
+  padding: 1rem;
+  background: var(--bg-secondary);
 }
