--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flash_messages' %>
-    <%= yield %>
+    <main>
+      <%= yield %>
+    </main>  
   </body>
 </html>
