--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,10 @@
 <nav class="navbar">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a href="#" class="logo">
-        <span class="logo-text">Challenge</span>
+      <%= link_to root_path, class:'logo' do %>
+        <span class="logo-text"><%= t('.app_name') %></span>
         <span class="logo-no">#1</span>
-      </a>
+      <% end %>  
     </li>
     <li class="nav-item">
       <a href="#" class="nav-link">
