redo models association/add submit buttom to form partial

--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -20,4 +20,7 @@
                      autocomplete: 'on',
                      placeholder: t('.phone') %>
   </div>
+  <div>
+    <%= f.submit t('.submit') %>
+  </div>
 <% end %>  
