--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
     <%= render 'shared/shim' %>
   </head>
   <body>
-    <%= render 'shared/navbar' %>
+    <% if current_user %>
+      <%= render 'shared/navbar' %>
+    <% end %>  
     <%= render 'shared/flash_messages' %>
     <main>
       <%= yield %>
