--- a/app/assets/stylesheets/selectors.scss
+++ b/app/assets/stylesheets/selectors.scss
@@ -13,6 +13,7 @@
   --bg-primary: #ECF0F1;
   --bg-secondary: #D0D3D4;
   --bg-nav: #2D2D2B;
+  --card-shadow: #979A9A;
   --transition-speed: 750ms;	
 }
 
