--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,7 +1,5 @@
 <div class=container> 
-  <h3>
-    <%= t('.header') %>
-  </h3>
+  <h3><%= t('.header') %></h3>
   <%= render 'form', client: @client, url: clients_path %>
   <%= link_to t('.back'), clients_path %>
 </div>
