add profile photo to clients model

--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,4 +1,7 @@
 <%= form_for(client, url: url) do |f| %>
+  <div>
+    <%= f.file_field :client_image %>
+  </div>
   <div class="form">
     <%= f.text_field :first_name,
                      autofocus:true,
