--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,3 +1,3 @@
 <% @clients.each do |client| %>
-  <h4><%= client.first_name %></h4>
+  <%= link_to client.first_name, client_path(client) %></h4>
 <% end %>
