add edit/delete functionality to clients controller

--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -3,5 +3,5 @@
     <%= t('.header') %>
   </h3>
   <%= render 'form', client: @client, url: client_path(@client) %>
-  <%= link_to ('.back'), clients_path %>
+  <%= link_to t('.back'), clients_path %>
 </div>
