--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,3 +1,10 @@
 <% @clients.each do |client| %>
-  <%= link_to client.first_name, client_path(client) %></h4>
+  <%= link_to client_path(client), class:'clients-show' do %>
+    <div class="client-card">
+      <div class="client-card-container">
+        <h3><%= client.first_name %></h3>
+        <h3><%= client.last_name %></h3>
+      </div>
+    </div>
+  <% end %>
 <% end %>
