--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <ul class="navbar-nav">
     <li class="nav-item">
       <%= link_to root_path, class:'logo' do %>
-        <span class="logo-text"><%= t('.app_name') %></span>
+        <span class="logo-text">Challenge</span>
         <span class="logo-no">#1</span>
       <% end %>  
     </li>
