--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -1,4 +1,5 @@
 .client-card {
+  width: 300px;
   text-align: center;
   margin-bottom: 0.8rem;
   box-shadow: 0 4px 8px 0 var(--card-shadow);
@@ -14,4 +15,4 @@
 .clients-show {
   text-decoration: none;
   color: black;
-}
+} 
