--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(client, url: url) do |f| %>
+  <%= render 'shared/error_messages', object: client %>
   <div class="form">
     <%= f.text_field :first_name,
                      autofocus:true,
