add responsiveness to index view

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -10,3 +10,4 @@
     <%= link_to t('.delete'), client_path(@client), method: :delete, data: { confirm: t('.confirmation') } %>
   </div>
 </div>
+<div><%= link_to t('.back'), clients_path %></div>
