--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -1,7 +1,26 @@
+.clients-show {
+  text-decoration: none;
+  color: black;
+  .clients-card {
+    width: 300px;
+    margin-bottom: 0.4rem;
+    font-size: 0.8rem;
+    text-align: center;
+    box-shadow: 0 1px 2px 0 var(--card-shadow);
+    transition: 0.3s;
+    &:hover {
+      box-shadow: 0 2px 4px 0 var(--card-shadow);
+    }
+    .clients-card-container {
+      padding: 2px 16px;
+    }
+  }  
+} 
 .client-card {
-  width: 300px;
-  text-align: center;
+  height: 460px;
+  width: 400px;
   margin-bottom: 0.8rem;
+  text-align: center;
   box-shadow: 0 4px 8px 0 var(--card-shadow);
   transition: 0.3s;
   &:hover {
@@ -12,7 +31,11 @@
   }
 }
 
-.clients-show {
-  text-decoration: none;
-  color: black;
-} 
+@media (max-width: 650px) {
+  .clients-show {
+    .clients-card {
+      width: 500px;
+      font-size: 1.1rem; 
+    }   
+  } 
+}
