--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,7 +1,7 @@
 <% @clients.each do |client| %>
   <%= link_to client_path(client), class:'clients-show' do %>
-    <div class="client-card">
-      <div class="client-card-container">
+    <div class="clients-card">
+      <div class="clients-card-container">
         <h3><%= "#{ client.first_name } #{client.last_name}" %></h3>
       </div>
     </div>
