add style to clients form

--- a/app/assets/stylesheets/selectors.scss
+++ b/app/assets/stylesheets/selectors.scss
@@ -13,7 +13,9 @@
   --bg-primary: #ECF0F1;
   --bg-secondary: #D0D3D4;
   --bg-nav: #2D2D2B;
-  --card-shadow: #979A9A;
+  --btn-inactive: #424949;
+  --btn-active: #2D2D2B;
+  --card-shadow: #2D2D2B;
   --transition-speed: 750ms;	
 }
 
