--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -1,25 +1,26 @@
-.clients-show {
+.clients-list {
+  font-family: 'Roboto', sans-serif;
   text-decoration: none;
-  color: black;
-  .clients-card {
-    width: 300px;
-    margin-bottom: 0.4rem;
-    font-size: 0.8rem;
-    text-align: center;
-    box-shadow: 0 1px 2px 0 var(--card-shadow);
+  color: var(--bg-nav);
+  .clients-list-card {
+    width: 400px;
+    margin-bottom: 0.8rem;
+    padding-bottom: 5px;
+    border-bottom: 1px solid var(--text-primary);
+    letter-spacing: 3.2px;
+    font-size: 0.9rem;
     transition: 0.3s;
     &:hover {
-      box-shadow: 0 2px 4px 0 var(--card-shadow);
-    }
-    .clients-card-container {
-      padding: 2px 16px;
+      box-shadow: 0 0.4px var(--text-primary);
     }
   }  
 } 
+
 .client-card {
   height: 460px;
   width: 400px;
   margin-bottom: 0.8rem;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   box-shadow: 0 4px 8px 0 var(--card-shadow);
   transition: 0.3s;
@@ -27,7 +28,7 @@
     box-shadow: 0 8px 16px 0 var(--card-shadow);
   }
   .client-card-container {
-    padding: 2px 16px;
+    padding: 1rem;
   }
 }
 
