--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,5 +1,6 @@
 .navbar {
   position: fixed;
+  transition: width 200ms ease;
   .navbar-nav {
     display: flex;
     flex-direction: column;
@@ -12,21 +13,20 @@
         align-items: center;
         height: 4rem;
         text-decoration: none;
-        transition: var(--transition-speed);
-        color: var(--text-primary);
-        &:hover {
-          .link-text { display: inline; }          
-          color: var(--text-secondary);
-        }
         svg {
           min-width: 1.5rem;
           margin-left: 0.75rem;
+          color: var(--text-primary);
         }  
         .link-text {
           display: none;
           margin-left: 1rem; 
-          font-size: 0.8rem; 
+          font-size: 0.8rem;
+          color: var(--text-primary); 
         }
+        &:hover { 
+          svg { color: var(--text-secondary); }
+        }  
       }
       .logo {
         display: flex;
@@ -40,9 +40,7 @@
         background: var(--logo-bg);
         color: var(--logo-text);
         &:hover {
-          .logo-text {          
-            color: var(--logo-text-hover);
-          }
+          .logo-text { color: var(--logo-text-hover); }
           .logo-no {
             transition: var(--transition-speed);
             color: var(--logo-no);
@@ -71,16 +69,15 @@
     .navbar-nav {
       background: var(--bg-nav);
       flex-direction: row;
+      align-items: center;
       .nav-item {
         .nav-link {
-          justify-content: center;
+          justify-content: space-evenly;
           .link-text {
             display: none;
           }
         }
-        &:first-child { 
-          display: none;
-        }   	
+        &:first-child { display: none; }   	
       }       
     }       
   }
@@ -97,9 +94,16 @@
     width: 3rem;
     height: 100vh;
     background-color: var(--bg-nav);    
-    .nav-item:last-child {
-      margin-top: auto;
-    }
+    .nav-item { 
+      .nav-link {
+        &:hover {
+          .link-text {
+            display: inline; 
+          }
+        }
+      }
+      &:last-child { margin-top: auto; }
+    }    
   }
   
   main {
