--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,7 +1,3 @@
-<div class=container> 
-  <h3>
-    <%= t('.header') %>
-  </h3>
-  <%= render 'form', client: @client, url: client_path(@client) %>
-  <%= link_to t('.back'), clients_path %>
-</div>
+<h3 class="header"><%= t('.header') %></h3>
+<%= render 'form', client: @client, url: client_path(@client) %>
+<%= link_to t('.back'), clients_path, class: 'btn-link' %>
