--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,13 +1,18 @@
 <div class="client-card">
   <div class="client-card-container">
-    <h3><%= @client.first_name %></h3>
-    <h3><%= @client.last_name %></h3>
+    <h3><%= "#{ @client.first_name } #{ @client.last_name }" %></h3>
     <h5><%= @client.email %></h5>
     <h5><%= @client.mobile_phone %></h5>
   </div>
-  <div>
-    <%= link_to t('.edit'), edit_client_path %>
-    <%= link_to t('.delete'), client_path(@client), method: :delete, data: { confirm: t('.confirmation') } %>
-  </div>
-</div>
-<div><%= link_to t('.back'), clients_path %></div>
+  <div class="btn-card">
+    <%= link_to t('.edit'), edit_client_path, 
+                            class: 'btn-link' %>
+    <%= link_to t('.delete'), client_path(@client), 
+                              class: 'btn-link', 
+                              method: :delete, 
+                              data: { confirm: t('.confirmation') } %>
+
+    <%= link_to t('.back'), clients_path, 
+                            class: 'btn-link' %>
+  </div>                            
+</div>  
