--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,42 @@
-<h3><%= t('.header') %></h3>
-<%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-  <div>
+<h3 class="header"><%= t('.header') %></h3>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= render 'shared/error_messages', object: resource %>
+  <div class="form">
     <%= f.text_field :first_name,
                       autofocus: true,
                       autocomplete: 'on',
-                      placeholder: t('.name') %>
+                      placeholder: t('.name'), 
+                      class: 'field' %>
   </div>
-  <div>
+  <div class="form">
     <%= f.text_field :last_name,
                       autofocus: true,
                       autocomplete: 'on',
-                      placeholder: t('.last_name') %>
+                      placeholder: t('.last_name'), 
+                      class: 'field' %>
   </div>
-  <div>
+  <div class="form">
     <%= f.email_field :email,
                       autofocus: true,
                       autocomplete: 'on',
-                      placeholder: t('.email') %>
+                      placeholder: t('.email'), 
+                      class: 'field' %>
   </div>
-  <div>
+  <div class="form">
     <%= f.password_field :password,
                           autocomplete: 'off',
-                          placeholder: t('.password') %>
+                          placeholder: t('.password'), 
+                          class: 'field' %>
   </div>
-  <div>
+  <div class="form">
     <%= f.password_field :password_confirmation,
                           autocomplete: 'off',
-                          placeholder: t('.password_confirmation') %>
+                          placeholder: t('.password_confirmation') ,
+                          class: 'field' %>
   </div>  
   <div>
-    <%= f.submit t('.signup') %>
+    <%= f.submit t('.signup'), class: 'btn' %>
   </div>
+  <%= link_to t('.back'), new_user_session_path, class: 'btn-link' %>
 <% end %>
   
