--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   position: fixed;
-  transition: width 200ms ease;
+  transition: width var(--fast) ease;
   .navbar-nav {
     display: flex;
     flex-direction: column;
@@ -16,16 +16,16 @@
         svg {
           min-width: 1.5rem;
           margin-left: 0.75rem;
-          color: var(--text-primary);
+          color: var(--light-gray);
         }  
         .link-text {
           display: none;
           margin-left: 1rem; 
           font-size: 0.8rem;
-          color: var(--text-primary); 
+          color: var(--gray); 
         }
         &:hover { 
-          svg { color: var(--text-secondary); }
+          svg { color: var(--ice); }
         }  
       }
       .logo {
@@ -37,13 +37,13 @@
         text-decoration: none;
         text-transform: uppercase;
         margin-bottom: 0.6rem;
-        background: var(--logo-bg);
-        color: var(--logo-text);
+        background: var(--black);
+        color: var(--gray);
         &:hover {
-          .logo-text { color: var(--logo-text-hover); }
+          .logo-text { color: var(--white); }
           .logo-no {
-            transition: var(--transition-speed);
-            color: var(--logo-no);
+            transition: var(--slow);
+            color: var(--yellow);
           }
         }
         .logo-text {   
@@ -67,7 +67,7 @@
     width: 100vw;
     height: 3.8rem;
     .navbar-nav {
-      background: var(--bg-nav);
+      background: var(--dark-gray);
       flex-direction: row;
       align-items: center;
       .nav-item {
@@ -93,7 +93,7 @@
     top: 0;
     width: 3rem;
     height: 100vh;
-    background-color: var(--bg-nav);    
+    background-color: var(--dark-gray);    
     .nav-item { 
       .nav-link {
         &:hover {
