--- a/app/assets/stylesheets/text.scss
+++ b/app/assets/stylesheets/text.scss
@@ -1,6 +1,6 @@
 .header {
   margin-bottom: 1rem;
-  color: var(--text-primary);
+  color: var(--dark-gray);
   font-family: 'Roboto', sans-serif;
   font-size: 2.2rem;  
   font-weight: lighter;
