align with new css variables

--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -25,5 +25,5 @@
                     placeholder: t('.phone'),
                     class: 'field' %>
   </div>
-  <%= f.submit t('.submit'), class: 'btn'%>
+  <%= f.submit t('.submit'), class: 'submit-btn'%>
 <% end %> 
