--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,8 +35,8 @@
                           class: 'field' %>
   </div>  
   <div>
-    <%= f.submit t('.signup'), class: 'btn' %>
+    <%= f.submit t('.signup'), class: 'submit-btn' %>
   </div>
-  <%= link_to t('.back'), new_user_session_path, class: 'btn-link' %>
+  <%= link_to t('.back'), new_user_session_path, class: 'nav-btn' %>
 <% end %>
   
