--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -7,8 +7,25 @@
     font-family: 'Roboto', sans-serif;
     font-size: 14px;  
     background-color: var(--ice);
-    border: none;
     border-radius: 5px;
+    border: none;
     outline: none;
   }
+  .label {
+    font-size: 14px;
+  }
 }
+
+.remember {
+  margin: 10px 0;
+  display: flex;
+  .checkbox {
+    height: 15px;
+    width: 12px;
+    margin: 0 8px;
+    cursor: pointer;
+  }
+  .label {
+    font-size: 0.8rem;
+  }
+}  
