--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,11 +8,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
 body { 
+  height: 100vh;
   display: flex;
   background: var(--lighter-gray);
 }
 
 main {
-  margin: 5rem auto;
+  margin: 3rem auto;
   padding: 1rem;
+}
+
+@media (max-width: 650px) {
+  main {
+    margin-top: 0;  
+  }
 }
