--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,21 +1,23 @@
-.form {
-  margin-bottom: 5px;
-  .field {
-    height: 40px;
-    width: 360px;
-    padding-left: 10px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;  
-    background-color: var(--ice);
-    border-radius: 5px;
-    border: none;
-    outline: none;
-  }
-  .label {
-    font-size: 14px;
+.form-container {
+  margin-top: 4rem;
+  .form {
+    margin-bottom: 5px;
+    .field {
+      height: 40px;
+      width: 360px;
+      padding-left: 10px;
+      font-family: 'Roboto', sans-serif;
+      font-size: 14px;  
+      background-color: var(--ice);
+      border-radius: 5px;
+      border: none;
+      outline: none;
+    }
+    .label {
+      font-size: 14px;
+    }
   }
 }
-
 .remember {
   margin: 10px 0;
   display: flex;
@@ -29,3 +31,9 @@
     font-size: 0.8rem;
   }
 }  
+
+@media (max-width: 650px) {
+  .form-container {
+    margin-top: 7rem;
+  } 
+}
