--- a/app/assets/stylesheets/text.scss
+++ b/app/assets/stylesheets/text.scss
@@ -1,5 +1,6 @@
 .header {
-  margin-bottom: 1rem;
+  width: 100%;
+  margin-bottom: 5%;
   color: var(--dark-gray);
   font-family: 'Roboto', sans-serif;
   font-size: 2.2rem;  
@@ -8,7 +9,9 @@
 }
 
 .alert {
+  text-align: center;
   margin-bottom: 6px;
+  background-color: var(--ice);
   font-size: 12px;
   p { font-size: 1rem; }
   ul { list-style: none; }
