--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -4,10 +4,8 @@
 <% end %>
 <% @clients.each do |client| %>
   <%= link_to client_path(client), class:'clients-list' do %>
-    <div class="clients-list-card">
-      <div class="clients-card-container">
-        <h3><%= "#{ client.first_name } #{client.last_name}" %></h3>
-      </div>
+    <div class="clients-list-item">
+      <h3><%= "#{ client.first_name } #{client.last_name}" %></h3>
     </div>
   <% end %>
 <% end %>
