--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,42 +1,43 @@
-<h3 class="header"><%= t('.header') %></h3>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render 'shared/error_messages', object: resource %>
-  <div class="form">
-    <%= f.text_field :first_name,
-                      autofocus: true,
-                      autocomplete: 'on',
-                      placeholder: t('.name'), 
-                      class: 'field' %>
-  </div>
-  <div class="form">
-    <%= f.text_field :last_name,
-                      autofocus: true,
-                      autocomplete: 'on',
-                      placeholder: t('.last_name'), 
-                      class: 'field' %>
-  </div>
-  <div class="form">
-    <%= f.email_field :email,
-                      autofocus: true,
-                      autocomplete: 'on',
-                      placeholder: t('.email'), 
-                      class: 'field' %>
-  </div>
-  <div class="form">
-    <%= f.password_field :password,
-                          autocomplete: 'off',
-                          placeholder: t('.password'), 
-                          class: 'field' %>
-  </div>
-  <div class="form">
-    <%= f.password_field :password_confirmation,
-                          autocomplete: 'off',
-                          placeholder: t('.password_confirmation') ,
-                          class: 'field' %>
-  </div>  
-  <div>
-    <%= f.submit t('.signup'), class: 'submit-btn' %>
-  </div>
-  <%= link_to t('.back'), new_user_session_path, class: 'nav-btn' %>
-<% end %>
-  
+<div class="form-container">
+  <h3 class="header"><%= t('.header') %></h3>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render 'shared/error_messages', object: resource %>
+    <div class="form">
+      <%= f.text_field :first_name,
+                        autofocus: true,
+                        autocomplete: 'on',
+                        placeholder: t('.name'), 
+                        class: 'field' %>
+    </div>
+    <div class="form">
+      <%= f.text_field :last_name,
+                        autofocus: true,
+                        autocomplete: 'on',
+                        placeholder: t('.last_name'), 
+                        class: 'field' %>
+    </div>
+    <div class="form">
+      <%= f.email_field :email,
+                        autofocus: true,
+                        autocomplete: 'on',
+                        placeholder: t('.email'), 
+                        class: 'field' %>
+    </div>
+    <div class="form">
+      <%= f.password_field :password,
+                            autocomplete: 'off',
+                            placeholder: t('.password'), 
+                            class: 'field' %>
+    </div>
+    <div class="form">
+      <%= f.password_field :password_confirmation,
+                            autocomplete: 'off',
+                            placeholder: t('.password_confirmation') ,
+                            class: 'field' %>
+    </div>  
+    <div>
+      <%= f.submit t('.signup'), class: 'submit-btn' %>
+    </div>
+    <%= link_to t('.back'), new_user_session_path, class: 'nav-btn' %>
+  <% end %>
+</div>    
